--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "color": "^2.0.1",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
+    "react-native-image-gallery": "^2.1.5",
     "react-native-modal": "^4.1.1",
     "urbanoe-common": "^1.0.0",
     "urbanoe-model": "^1.0.0"
