--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "urbanoe-mobile-ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Defines React Native components for an urbanoe based application.",
   "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/mbeauv/urbanoe-mobile-ui.git"
+  },
   "scripts": {
     "prebuild": "rimraf dist && mkdir dist",
     "build": "babel src/ -d dist/ --copy-files --ignore __tests__",
@@ -29,8 +33,8 @@
     "moment": "^2.20.1",
     "react-native-image-gallery": "^2.1.5",
     "react-native-modal": "^4.1.1",
-    "urbanoe-common": "^1.0.0",
-    "urbanoe-model": "^1.0.0"
+    "urbanoe-common": "^1.0.1",
+    "urbanoe-model": "^1.0.1"
   },
   "peerDependencies": {
     "react": "16.0.0-beta.5",
