--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "urbanoe-model": "^1.0.1"
   },
   "peerDependencies": {
-    "react": "16.0.0-beta.5",
-    "react-native": "^0.49.5",
-    "react-native-elements": "^0.18.2"
+    "react": "16.3.0-alpha.0",
+    "react-native": "^0.52.0",
+    "react-native-elements": "^0.19.0"
   }
 }
